--- a/app/src/main/res/layout/footer_layot.xml
+++ b/app/src/main/res/layout/footer_layot.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Загрузка"
+        android:text="Загрузка данных из интернета"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <ProgressBar
