--- a/app/src/main/res/layout/my_list.xml
+++ b/app/src/main/res/layout/my_list.xml
@@ -33,5 +33,12 @@
             android:text="TextView"
             android:layout_marginLeft="10dp"
             android:textColor="#8b8a8a"/>
+        <TextView
+            android:id="@+id/tvPublished"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:layout_marginLeft="10dp"
+            android:textColor="#8b8a8a"/>
     </LinearLayout>
 </LinearLayout>
