--- a/app/src/main/res/layout/my_list.xml
+++ b/app/src/main/res/layout/my_list.xml
@@ -20,7 +20,7 @@
             android:id="@+id/item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Medium Text"
+            android:text="item"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
@@ -30,14 +30,21 @@
             android:id="@+id/desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="desc"
             android:layout_marginLeft="10dp"
             android:textColor="#8b8a8a"/>
         <TextView
             android:id="@+id/tvPublished"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="tvPublished"
+            android:layout_marginLeft="10dp"
+            android:textColor="#8b8a8a"/>
+        <TextView
+            android:id="@+id/tvChannelTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="tvChannelTitle"
             android:layout_marginLeft="10dp"
             android:textColor="#8b8a8a"/>
     </LinearLayout>
