--- a/app/src/main/res/layout/pager_item_1.xml
+++ b/app/src/main/res/layout/pager_item_1.xml
@@ -5,27 +5,18 @@
     android:orientation="vertical"
     android:weightSum="1">
 
-    <LinearLayout
+
+    <TextView
+        android:text="tv7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:text="tv2"
-            android:id="@+id/tv1"/>
-    </LinearLayout>
+        android:id="@+id/tv7" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="330dp"
-        android:orientation="vertical">
-
-        <android.support.v4.widget.SwipeRefreshLayout
+    <android.support.v4.widget.SwipeRefreshLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/swipe_container"
             android:layout_width="match_parent"
-            android:layout_height="270dp">
+            android:layout_height="match_parent">
             <ListView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,6 +24,6 @@
             </ListView>
         </android.support.v4.widget.SwipeRefreshLayout>
 
-    </LinearLayout>
+
 
 </LinearLayout>
