--- a/app/src/main/res/layout/activity_yt.xml
+++ b/app/src/main/res/layout/activity_yt.xml
@@ -7,23 +7,52 @@
     tools:context="ru.novil.sergey.navigationdraweractivity.YTActivity">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/rl">
 
         <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/player_view_yt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_below="@+id/rl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
         <TextView
-        android:layout_below="@id/player_view_yt"
-        android:text="YTActivityTitle"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/tvYTActivityTitle" />
+            android:text="YTActivityTitle"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/tvYTActivityTitle" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/tvDescription"
+            android:layout_below="@+id/tvYTActivityTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@+id/tvDescription"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/mainlayout"
+        />
+
+
+
+
+
+
+
 
 </RelativeLayout>
